Fixed button group alignment with form fields in webkit browsers

--- a/static_files/assets/sass/_components.scss
+++ b/static_files/assets/sass/_components.scss
@@ -1,4 +1,8 @@
 /* Buttons */
+.btn {
+  // Override default .btn line-height, which is a rounded value that browsers interpret differently.
+  line-height: 20px;
+}
 .btn.disabled {
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.125) inset;
 }
